--- a/index.css
+++ b/index.css
@@ -1,56 +1,51 @@
-/* Futuro root 
-
-:root {
-    --bg-color: #fafafa;
-    --navl-color: #fff;
-    --btn-color: blue;
-    --h-color: #222;
- }
-
-*/
-
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-        
+
 }
 
 
 
-.header{
+header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(https://www.ufs.br/uploads/body_image/gist/60209/predio_foto_02_para_fotolegenda.jpg);
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(https://www.ufs.br/uploads/body_image/gist/60209/predio_foto_02_para_fotolegenda.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
 }
-nav{
+
+nav {
     display: flex;
     padding: 2% 6%;
     justify-content: space-between;
     align-items: center;
 }
-nav img{
+
+nav img {
     width: 150px;
 }
-.nav-links{
+
+.nav-links {
     flex: 1;
     text-align: right;
 }
-.nav-links ul li{
+
+.nav-links ul li {
     list-style: none;
     display: inline-block;
     padding: 8px 12px;
     position: relative;
 }
-.nav-links ul li a{
+
+.nav-links ul li a {
     color: #fff;
     text-decoration: none;
     font-size: 13px;
 }
-.nav-links ul li::after{
+
+.nav-links ul li::after {
     content: '';
     width: 0%;
     height: 2px;
@@ -59,28 +54,33 @@ nav img{
     margin: auto;
     transition: 0.5s;
 }
-.nav-links ul li:hover::after{
+
+.nav-links ul li:hover::after {
     width: 100%;
 }
-.text-box{
+
+.text-box {
     width: 90%;
-    color:#fff;
+    color: #fff;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     text-align: center;
 }
-.text-box h1{
+
+.text-box h1 {
     font-size: 62px;
-    
+
 }
-.text-box p{
+
+.text-box p {
     margin: 10px 0 40px;
     font-size: 14px;
-    color:#fff;
+    color: #fff;
 }
-.hero-btn{
+
+.hero-btn {
     display: inline-block;
     text-decoration: none;
     color: #fff;
@@ -91,24 +91,27 @@ nav img{
     position: relative;
     cursor: pointer;
 }
-.hero-btn:hover{
+
+.hero-btn:hover {
     border: 1px solid blue;
     background: blue;
     transition: 1s;
 }
 
-nav .fa{
+nav .fa {
     display: none;
 }
 
-@media(max-width: 700px){
-    .text-box h1{
+@media(max-width: 700px) {
+    .text-box h1 {
         font-size: 20px;
     }
-    .nav-links ul li{
-            display: block;
+
+    .nav-links ul li {
+        display: block;
     }
-    .nav-links{
+
+    .nav-links {
         position: fixed;
         background: blue;
         height: 100vh;
@@ -119,49 +122,55 @@ nav .fa{
         z-index: 2;
         transition: 1s;
     }
-    nav .fa{
+
+    nav .fa {
         display: block;
         color: #fff;
         margin: 10px;
         font-size: 22px;
         cursor: pointer;
     }
-    .nav-links ul{
+
+    .nav-links ul {
         padding: 30px;
     }
 }
 
 /* Cursos */
 
-.course{
+.course {
     width: 80%;
     margin: auto;
     text-align: center;
     padding-top: 100px;
 }
-.course-col p{
+
+.course-col p {
     color: white;
 }
-h1{
+
+h1 {
     font-size: 36px;
     font-weight: 600;
 }
 
-.campus p{
+.campus p {
     color: #777;
     font-size: 14px;
     font-weight: 300;
     line-height: 22px;
     padding: 10px;
 }
-.facilities p{
+
+.facilities p {
     color: #777;
     font-size: 14px;
     font-weight: 300;
     line-height: 22px;
     padding: 10px;
 }
-.testimonials p{
+
+.testimonials p {
     color: #777;
     font-size: 14px;
     font-weight: 300;
@@ -170,12 +179,13 @@ h1{
 }
 
 
-.row{
+.row {
     margin-top: 5%;
     display: flex;
     justify-content: space-between;
 }
-.course-col{
+
+.course-col {
     flex-basis: 31%;
     background: #84a8f5;
     border-radius: 10px;
@@ -184,41 +194,47 @@ h1{
     box-sizing: border-box;
     transition: 0.5s;
 }
-h3{
+
+h3 {
     text-align: center;
     font-weight: 600;
     margin: 10px 0;
     color: #222;
 }
-.course-col:hover{
-    box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+
+.course-col:hover {
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
 }
-@media(max-width: 700px){
-    .row{
+
+@media(max-width: 700px) {
+    .row {
         flex-direction: column;
     }
 }
 
 /* Campus */
-.campus{
+.campus {
     width: 80%;
     margin: auto;
     text-align: center;
     padding-top: 50px;
 }
-.campus-col{
+
+.campus-col {
     flex-basis: 32%;
     border-radius: 10px;
     margin-bottom: 30px;
     position: relative;
     overflow: hidden;
 }
-.campus-col img{
+
+.campus-col img {
     width: 100%;
     display: block;
 }
-.layer{
-    background: transparent;    
+
+.layer {
+    background: transparent;
     height: 100%;
     width: 100%;
     position: absolute;
@@ -226,10 +242,12 @@ h3{
     left: 0;
     transition: 0.5s;
 }
-.layer:hover{
+
+.layer:hover {
     background: rgba(0, 132, 209, 0.7);
 }
-.layer h3{
+
+.layer h3 {
     width: 100%;
     font-weight: 500;
     color: #fff;
@@ -241,11 +259,13 @@ h3{
     opacity: 0;
     transition: 0.5s;
 }
-.layer:hover h3{
+
+.layer:hover h3 {
     bottom: 55%;
     opacity: 1;
 }
-.layer p{
+
+.layer p {
     width: 100%;
     font-weight: 500;
     color: #fff;
@@ -256,10 +276,11 @@ h3{
     position: absolute;
     opacity: 0;
     transition: 0.5s;
-    
+
 }
-.layer:hover p{
-    
+
+.layer:hover p {
+
     bottom: 5%;
     opacity: 1;
 }
@@ -267,26 +288,30 @@ h3{
 
 /* Estrutura */
 
-.facilities{
+.facilities {
     width: 80%;
     margin: auto;
     text-align: center;
     padding-top: 100px;
 }
-.facilities-col{
+
+.facilities-col {
     flex-basis: 31%;
     border-radius: 10px;
     margin-bottom: 5%;
     text-align: center;
 }
-.facilities-col img{
+
+.facilities-col img {
     width: 100%;
     border-radius: 10px;
 }
-.facilities-col p{
+
+.facilities-col p {
     padding: 0;
-    }
-.facilities-col h3{
+}
+
+.facilities-col h3 {
     margin-top: 1px;
     margin-bottom: 15px;
     text-align: center;
@@ -294,13 +319,14 @@ h3{
 
 /* Testemunhos */
 
-.testimonials{
+.testimonials {
     width: 80%;
     margin: auto;
     padding-top: 100px;
     text-align: center;
 }
-.testimonials-col{
+
+.testimonials-col {
     flex-basis: 44%;
     border-radius: 10px;
     margin-bottom: 5%;
@@ -310,154 +336,176 @@ h3{
     cursor: pointer;
     display: flex;
 }
-.testimonials-col img{
+
+.testimonials-col img {
     height: 40px;
     margin-left: 5px;
     margin-right: 30px;
     border-radius: 50%;
 }
-.testimonials-col p{
+
+.testimonials-col p {
     padding: 0;
     color: white;
 }
-.testimonials-col h3{
+
+.testimonials-col h3 {
     margin-top: 15px;
     text-align: left;
 }
-.testimonials-col .fa{
+
+.testimonials-col .fa {
     color: #5236f4;
 }
-@media(max-width: 700px){
-    .testimonials-col img{
+
+@media(max-width: 700px) {
+    .testimonials-col img {
         margin-left: 0px;
         margin-right: 15px;
-            }
+    }
 }
 
 /* Contato */
-.cta{
+.cta {
     margin: 100px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(images/banner2.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(images/banner2.jpg);
     background-position: center;
     background-size: cover;
     border-radius: 10px;
     text-align: center;
     padding: 100px 0;
 }
-.cta h1{
+
+.cta h1 {
     color: #fff;
     margin-bottom: 40px;
     padding: 0;
 }
 
-@media(max-width: 700px){
-    .cta h1{
+@media(max-width: 700px) {
+    .cta h1 {
         font-size: 24px;
     }
 }
 
 /* Rodapé */
 
-.footer{
+footer {
     width: 100%;
     text-align: center;
     padding: 30px 0;
 }
-.footer h4{
+
+footer h4 {
     margin-bottom: 25px;
     margin-top: 20px;
     font-weight: 600;
 
 }
-.icons .fa{
+
+.icons .fa {
     color: blue;
     margin: 0 13px;
     cursor: pointer;
     padding: 18px 0;
 }
-.fa-heart{
+
+.fa-heart {
     color: blue;
 }
 
 /* Sobre o DCOMP */
 
-.sub-header{
+.sub-header {
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/background.jpg);
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(images/background.jpg);
     background-position: center;
     background-size: cover;
     text-align: center;
     color: #fff;
 }
-.sub-header h1{
+
+.sub-header h1 {
     margin-top: 40px;
 }
 
-.about-us{
+.about-us {
     width: 80%;
     margin: auto;
     padding-top: 80px;
     padding-bottom: 50px;
 }
-.about-col{
+
+.about-col {
     flex-basis: 48%;
     padding: 30px 2px;
 }
-.about-col img{
+
+.about-col img {
     width: 100%
 }
 
-.about-col h1{
+.about-col h1 {
     padding-top: 0;
 }
-.about-col p{
+
+.about-col p {
     padding: 15px 0 25px;
     color: black;
 }
-.blue-btn{
+
+.blue-btn {
     border: 1px solid blue;
     background: transparent;
     color: blue;
 }
-.blue-btn:hover{
+
+.blue-btn:hover {
     color: #fff;
 }
 
 /* Certificado e EAD */
 
-.blog-content{
+.blog-content {
     width: 80%;
     margin: auto;
     padding: 60px 0;
 }
-.blog-left{
+
+.blog-left {
     flex-basis: 65%;
 }
-.blog-left img{
+
+.blog-left img {
     width: 100%;
 }
-.blog-left h2{
+
+.blog-left h2 {
     color: #222;
     font-weight: 600;
     margin: 30px 0;
 }
-.blog-left p{
+
+.blog-left p {
     color: #999;
     padding: 0;
 }
-.blog-right{
+
+.blog-right {
     flex-basis: 32%;
 }
-.blog-right h3{
+
+.blog-right h3 {
     background: blue;
     color: fff;
     padding: 7px 0;
     font-size: 16px;
     margin-bottom: 20px;
 }
-.blog-right div{
+
+.blog-right div {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -466,15 +514,18 @@ h3{
     box-sizing: border-box;
 }
 
-.comment-box{
+.comment-box {
     border: 1px solid #ccc;
     margin: 50px 0;
     padding: 10px 20px;
 }
-.comment-box h3{
+
+.comment-box h3 {
     text-align: left;
 }
-.comment-form input, .comment-form textarea{
+
+.comment-form input,
+.comment-form textarea {
     width: 100%;
     padding: 10px;
     margin: 15px 0;
@@ -483,55 +534,65 @@ h3{
     outline: none;
     background: #f0f0f0;
 }
-.comment-form button{
+
+.comment-form button {
     margin: 10px 0;
 }
 
-@media(max-width:700px){
-    .sub-header h1{
+@media(max-width:700px) {
+    .sub-header h1 {
         font-size: 24px;
     }
 }
 
 /* Contato */
-.location{
+.location {
     width: 80%;
     margin: auto;
     padding: 80px 0;
 }
-.location iframe{
+
+.location iframe {
     width: 100%;
 }
-.contate-nos{
+
+.contate-nos {
     width: 80%;
     margin: auto;
 }
-.contact-col{
+
+.contact-col {
     flex-basis: 48%;
     margin-bottom: 30px;
 }
-.contact-col div{
+
+.contact-col div {
     display: flex;
     align-items: center;
     margin-bottom: 40px;
 }
-.contact-col div .fa{
+
+.contact-col div .fa {
     font-size: 28px;
     color: blue;
     margin: 10px;
     margin-right: 30px;
 }
-.contact-col div p{
+
+.contact-col div p {
     padding: 0;
     color: black;
 }
-.contact-col div h5{
+
+.contact-col div h5 {
     font-size: 20px;
     margin-bottom: 5px;
     color: #555;
     font-weight: 400;
 }
-.contact-col input, .contact-col textarea{
+
+.contact-col input,
+.contact-col textarea {
     width: 100%;
     padding: 15px;
     margin-bottom: 17px;
@@ -540,130 +601,149 @@ h3{
     box-sizing: border-box;
 }
 
-.CaixaCards{
+.CaixaCards {
     text-align: center;
     margin-top: 50px;
-  
+
 }
-.outroMain{
+
+.outroMain {
     margin-top: 10px;
-    display:inline-flex;
+    display: inline-flex;
     justify-content: center;
     padding: 1px;
 }
-.outroMain2{
+
+.outroMain2 {
     margin-top: 10px;
-    display:inline-flex;
+    display: inline-flex;
     justify-content: center;
 }
 
 
-.sideBar{
-padding: 10px;
-margin-left: 5px;
-border-top-left-radius: 10px;
-border-bottom-left-radius: 10px;
-background-color: rgb(42, 187, 206);
-width: 100px;
-display: inline-flex;
+.sideBar {
+    padding: 10px;
+    margin-left: 5px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    background-color: rgb(42, 187, 206);
+    width: 100px;
+    display: inline-flex;
 }
 
-.fotoProfessor{
+.fotoProfessor {
     border-radius: 10px;
 }
-.fotoProfessorEdit{
+
+.fotoProfessorEdit {
     width: 100px;
     height: 125px;
     border-radius: 10px;
 }
-.dcompLogo{
+
+.dcompLogo {
     width: 50px;
 }
-.mainContent{
-padding-left: 15px;
-background-color: rgb(59, 59, 224);
-width:350px;
-display: flex;
-text-align: left;
-margin-right: 5px;
-border-top-right-radius: 10px;
-border-bottom-right-radius: 10px;
+
+.mainContent {
+    padding-left: 15px;
+    background-color: rgb(59, 59, 224);
+    width: 350px;
+    display: flex;
+    text-align: left;
+    margin-right: 5px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
+
 .header2 {
     margin-top: 15px;
     font-size: 12px;
     color: white;
 }
-.area2{
+
+.area2 {
     margin-top: 25px;
 }
-.area2LP{
-    margin-top: 25px; 
+
+.area2LP {
+    margin-top: 25px;
 }
-@media (max-width:720px){
-    .mainContent{
-padding-left: 5px;
-background-color: rgb(59, 59, 224);
-width: 220px;
-display: flex;
-text-align: left;
-margin-right: 5px;
-border-top-right-radius: 10px;
-border-bottom-right-radius: 10px;
+
+@media (max-width:720px) {
+    .mainContent {
+        padding-left: 5px;
+        background-color: rgb(59, 59, 224);
+        width: 220px;
+        display: flex;
+        text-align: left;
+        margin-right: 5px;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
     }
-    .header2{
+
+    .header2 {
         font-size: 8px;
     }
-    .sideBar{
+
+    .sideBar {
         width: 60px;
     }
-    .fotoProfessor{
+
+    .fotoProfessor {
         width: 60px;
     }
-    .fotoProfessorEdit{
+
+    .fotoProfessorEdit {
         width: 60px;
         height: 75px;
     }
-    p{
+
+    p {
         font-size: 10px;
     }
-   
-    .area2LP img{
-        width:20px;
+
+    .area2LP img {
+        width: 20px;
     }
-    .area1 img{
-        width:20px;
+
+    .area1 img {
+        width: 20px;
     }
-    .area2 img{
-        width:20px;
+
+    .area2 img {
+        width: 20px;
     }
-    .area2{
+
+    .area2 {
         margin-top: 10px;
     }
-    .area2LP{
-        margin-top: 10px; 
+
+    .area2LP {
+        margin-top: 10px;
     }
 }
 
 
-.areas{
+.areas {
     margin-top: 20px;
-    display:inline-block;
-    
+    display: inline-block;
+
 }
-.area1 img{
+
+.area1 img {
     width: 40px;
     vertical-align: middle;
 }
 
-.area2 img{
-  
+.area2 img {
+
     width: 40px;
     vertical-align: middle;
 }
 
-.area2LP img{
-  
+.area2LP img {
+
     width: 40px;
     vertical-align: middle;
 }
@@ -673,36 +753,39 @@ p {
     display: inline-flex;
     color: white;
 }
-a{
+
+a {
     color: white;
 }
 
-.footer p{
+.footer p {
     color: black;
 }
-.container{
-    margin-top:30px;
+
+.container {
+    margin-top: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.pagination{
-   display: flex;
-   align-items: center;
-   background: rgb(80, 80, 226);
-   color:#383838;
-   
-   border-radius: 6px;
+
+.pagination {
+    display: flex;
+    align-items: center;
+    background: rgb(80, 80, 226);
+    color: #383838;
+    border-radius: 6px;
 }
-.pagination ul{
+
+.pagination ul {
     margin: 20px 30px;
 }
-.pagination ul li{
+
+.pagination ul li {
     display: inline-block;
     margin: 0 10px;
-    
     width: 40px;
-    height:40px;
+    height: 40px;
     border-radius: 50%;
     text-align: center;
     font-size: 22px;
@@ -712,13 +795,16 @@ a{
     background-position: 0 -45px;
     transform: background-position 0.5s;
 }
-ul li.active{
-    color:#fff;
+
+ul li.active {
+    color: #fff;
     background-image: linear-gradient(#0f1cd6, #0f1cd6);
     background-repeat: no-repeat;
     background-position: 0 0;
 }
-.btn1, .btn2{
+
+.btn1,
+.btn2 {
     display: inline-flex;
     align-items: center;
     font-size: 22px;
@@ -729,11 +815,13 @@ ul li.active{
     border: none;
     cursor: pointer;
 }
-.btn1 img{
+
+.btn1 img {
     width: 24px;
     margin-right: 15px;
 }
-.btn2 img{
+
+.btn2 img {
     width: 24px;
     margin-left: 15px;
     transform: rotate(180deg);
